@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-04-19T16:10:14Z",
+  "timestamp" : "2022-04-20T08:10:22Z",
   "count_outdated" : 923,
   "uniques_outdated" : 51,
-  "count" : 1034,
-  "uniques" : 63,
+  "count" : 1040,
+  "uniques" : 64,
   "views" : [
     {
       "timestamp": "2022-04-06T00:00:00Z",
@@ -88,6 +88,13 @@
       "count_minmax": [ 0, 5 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
+      "count": 6,
+      "count_minmax": [ 6, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
