@@ -1,5 +1,5 @@
 {
-  "count": 111,
+  "count": 117,
   "uniques": 1,
   "views": [
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-04-18T00:00:00Z",
       "count": 5,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-04-20T00:00:00Z",
+      "count": 6,
       "uniques": 1
     }
   ]
