@@ -1,3 +1,9 @@
+2022-04-20T08:10:22Z:
+* notice: last 14d: all unq: 117 1
+* notice: prev accum: outdated-all outdated-unq / all unq: 923 51 / 1034 63
+* notice: next accum: outdated-all outdated-unq / all unq: 923 51 / 1040 64
+* notice: prev json diff // prev day diff: unq all: +1 +6 / -0 -0 // +1 +6 / -0 -0
+
 2022-04-19T16:10:14Z:
 * notice: last 14d: all unq: 111 1
 * notice: prev accum: outdated-all outdated-unq / all unq: 908 50 / 1020 63
